--- a/search.html
+++ b/search.html
@@ -7,16 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Shrikhand">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-    
-    <link rel=html href="Deadpool.html">
-    
 
 </head>
 <nav>
         <div class="container">
           <h1 class="logo">Movie<span>Rate</span></h1>
           <ul class="site-nav">
-            <li><a href="homePage.html"><i class="fa fa-home site-nav--icon"></i>Home</a></li>
+            <li><a href="index.html"><i class="fa fa-home site-nav--icon"></i>Home</a></li>
             <li><a href="search.html"><i class="fa fa-info site-nav--icon"></i>Search</a></li>
 
           </ul>
