--- a/search.html
+++ b/search.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 
 </head>
+<title>Search</title>
 <nav>
         <div class="container">
           <h1 class="logo">Movie<span>Rate</span></h1>
